--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,3 +1,24 @@
+.cookie-consent
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f1f1f1;
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.cookie-consent button
+{
+  background-color: #4CAF50; 
+  color: white;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 4px;
+}
+
 .chat-app {
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -15,8 +36,8 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  height: 300px;
-  max-height: 300px; /* Adjust the height as needed */
+  height: 273px;
+  max-height: 273px; /* Adjust the height as needed */
   overflow-y: scroll; /* Add scrollbar for long chat history */
 }
 
@@ -24,8 +45,8 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  height: 95px;
-  max-height: 95px; /* Adjust the height as needed */
+  height: 129px;
+  max-height: 129px; /* Adjust the height as needed */
   overflow-y: scroll; /* Add scrollbar for long chat history */
 }
 
@@ -38,8 +59,8 @@
 .chat-window {
   display: flex;
   justify-content: flex-start; /* Align items to the left */
-  height: 400px;
-  max-height: 400px; /* Adjust the height as needed */
+  height: 380px;
+  max-height: 380px; /* Adjust the height as needed */
   overflow-y: scroll; /* Add scrollbar for long chat history */
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -75,7 +96,6 @@
   background-color: #4CAF50;
   color: white;
   padding: 10px;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -110,7 +130,6 @@
   background-color: #4CAF50;
   color: white;
   padding: 10px;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -161,7 +180,9 @@
   background-color: #4CAF50;
   color: white;
   padding: 10px;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin: 5px;
+  width: 170px;
 }
+
